--- a/templates/main.html
+++ b/templates/main.html
@@ -43,7 +43,7 @@
           <div class="form-group">
             <label for="exampleInputEmail1" style="padding-top:50px"></label>
             <div class="fbpost">
-              <textarea name="message" class="form-control" id="message" required placeholder="Anything to say? Write it here! :P"></textarea>
+              <textarea name="message" class="form-control" id="message" required placeholder="Anything to say? Write it here! :P">Team 4: </textarea>
             </div>
             <input type="hidden" name="access_token" value="">
             <input type="hidden" name="fbID" value="">
